@@ -18,7 +18,7 @@
 	},
 	"version": "2.1.0",
 	"require": {
-		"typo3/cms-core": ">=7.6.0,<9.0",
+		"typo3/cms-core": ">=8.7.0,<9.0",
 		"cobweb/svconnector": ">=3.1.0"
 	},
 	"replace": {
